--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,200&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,200&display=swap" rel="stylesheet">
     <title>Quentin & Emi Wedding</title>
 </head>
 <body>
-    <h1>Emi & Quentin</h1>
+    <h1 class="titre">Emi & Quentin</h1>
+    <img src="./assets/img/rameau.png" alt="Rameau">
 </body>
 </html>
