--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <title>Quentin & Emi Wedding</title>
 </head>
 <body>
-    <h1 class="titre">Emi & Quentin</h1>
-    <img src="./assets/img/rameau.png" alt="Rameau">
+    <div class="header">
+        <h1 class="titre">Emi</h1>
+        <h2 class="titreEsp">&</h2>
+        <h1 class="titre">Quentin</h1>
+    </div>
+    <div class="logo">
+        <img src="./assets/img/rameau.png" alt="Rameau">
+    </div>
+   
 </body>
 </html>
