--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <div class="logo">
         <img src="./assets/img/rameau.png" alt="Rameau">
     </div>
+    <div>
+        <h3>Compte à rebours</h3>
+        <p id="compte"></p>
+    </div>
    
+<script type="text/javascript" src="./assets/js/wedding.js"></script>
 </body>
 </html>
