mise en page CaR + logo

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
         <h2 class="titreEsp">&</h2>
         <h1 class="titre">Quentin</h1>
     </div>
-    <div class="logo">
-        <img src="./assets/img/rameau.png" alt="Rameau">
+    <div class="bloc1">
+        <div class="logo">
+            <img src="./assets/img/rameau.png" alt="Rameau">
+        </div>
+        <div class="compteAReb">
+            <h3>Compte à rebours</h3>
+            <p id="jours"></p>
+            <p id="heures"></p>
+            <p id="min"></p>
+            <p id="secs"></p>
+        </div>
     </div>
-    <div>
-        <h3>Compte à rebours</h3>
-        <p id="compte"></p>
-    </div>
-   
+
 <script type="text/javascript" src="./assets/js/wedding.js"></script>
 </body>
 </html>
