--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             <p id="jours"></p>
             <p id="heures"></p>
             <p id="min"></p>
-            <p id="secs"></p>
-        </div>
-        <div class="logo">
-            <img src="./assets/img/rameau.png" alt="Rameau">
+            <p id="sec"></p>
         </div>
     </div>
 
