--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
     <div class="bloc1">
         <div class="compteAReb">
             <h3>Compte à rebours</h3>
-            <p id="jours"></p>
-            <p id="heures"></p>
-            <p id="min"></p>
-            <p id="sec"></p>
+            <span id="jours"></span>
+            <span>JOURS</span>
+            <span id="heures"></span>
+            <span>HEURES</span>
+            <span id="min"></span>
+            <span>MIN</span>
+            <span id="sec"></span>
+            <span>SECS</span>
         </div>
     </div>
 
