--- a/index.html
+++ b/index.html
@@ -17,15 +17,25 @@
     </div>
     <div class="bloc1">
         <div class="compteAReb">
-            <h3>Compte à rebours</h3>
-            <span id="jours"></span>
-            <span>JOURS</span>
-            <span id="heures"></span>
-            <span>HEURES</span>
-            <span id="min"></span>
-            <span>MIN</span>
-            <span id="sec"></span>
-            <span>SECS</span>
+            <div class="jours">
+                <span id="jours"></span>
+                <br/>
+                <span>JOURS</span>
+            </div>
+            <div class="heures">
+                <span id="heures"></span>
+                <br/>
+                <span>HEURES</span>
+            </div>
+            <div class="min">
+                <span id="min"></span>
+                <br/>
+                <span>MIN</span>
+            </div>
+            <div class="sec">
+                <span id="sec"></span>
+                <span>SECS</span>
+            </div>
         </div>
     </div>
 
