--- a/index.html
+++ b/index.html
@@ -12,10 +12,26 @@
     <title>Quentin & Emi Wedding</title>
 </head>
 <body>
-    <div class="header">
-        <h1 class="titre">Emi</h1>
-        <h2 class="titreEsp">&</h2>
-        <h1 class="titre">Quentin</h1>
+    <div class="mainHeader">
+        <div class="navLeft">
+            <ul>
+                <a href="#"><li>Lorem 1</li></a>
+                <a href="#"><li>Lorem 2</li></a>
+                <a href="#"><li>Lorem 3</li></a>
+            </ul>
+        </div>
+        <div class="header">
+            <h1 class="titre">Emi</h1>
+            <h2 class="titreEsp">&</h2>
+            <h1 class="titre">Quentin</h1>
+        </div>
+        <div class="navRight">
+            <ul>
+                <a href="#"><li>Lorem 1</li></a>
+                <a href="#"><li>Lorem 2</li></a>
+                <a href="#"><li>Lorem 3</li></a>
+            </ul>
+        </div>
     </div>
     <div class="bloc1">
         <div class="compteAReb">
