--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="header">
             <h1 class="titre">Emi</h1>
-            <h2 class="titreEsp">&</h2>
+            <h2 class="titreEsp">&#8496;</h2>
             <h1 class="titre">Quentin</h1>
         </div>
         <div class="navRight">
@@ -33,27 +33,30 @@
             </ul>
         </div>
     </div>
-    <div class="bloc1">
-        <div class="compteAReb">
-            <div class="jours">
-                <span id="jours"></span>
-                <br/>
-                <span>JOURS</span>
-            </div>
-            <div class="heures">
-                <span id="heures"></span>
-                <br/>
-                <span>HEURES</span>
-            </div>
-            <div class="min">
-                <span id="min"></span>
-                <br/>
-                <span>MIN</span>
-            </div>
-            <div class="sec">
-                <span id="sec"></span>
-                <br/>
-                <span>SECS</span>
+    <div class="blocCaR">
+        <h3 class="saveTheDate">&#128640; &nbsp;Save the date : 25 Juin 2022</h3>
+        <div class="bloc1">
+            <div class="compteAReb">
+                <div class="jours">
+                    <span id="jours"></span>
+                    <br/>
+                    <span>JOURS</span>
+                </div>
+                <div class="heures">
+                    <span id="heures"></span>
+                    <br/>
+                    <span>HEURES</span>
+                </div>
+                <div class="min">
+                    <span id="min"></span>
+                    <br/>
+                    <span>MIN</span>
+                </div>
+                <div class="sec">
+                    <span id="sec"></span>
+                    <br/>
+                    <span>SECS</span>
+                </div>
             </div>
         </div>
     </div>
