mise en forme date avec CaR

--- a/index.html
+++ b/index.html
@@ -33,34 +33,48 @@
             </ul>
         </div>
     </div>
-    <div class="blocCaR">
-        <h3 class="saveTheDate">&#128640; &nbsp;Save the date : 25 Juin 2022</h3>
-        <div class="bloc1">
-            <div class="compteAReb">
-                <div class="jours">
-                    <span id="jours"></span>
-                    <br/>
-                    <span>JOURS</span>
+    <div class="secondaryHeader">
+        <div class="blocSTD">
+            <div class="date">
+                <div class="journee">
+                    <span class="saveTheDate">samedi</span>
                 </div>
-                <div class="heures">
-                    <span id="heures"></span>
-                    <br/>
-                    <span>HEURES</span>
+                <div class="numeroJournee">
+                    <span class="jour">25</span> 
                 </div>
-                <div class="min">
-                    <span id="min"></span>
-                    <br/>
-                    <span>MIN</span>
+                <div class="saveTheDate1">
+                    juin
                 </div>
-                <div class="sec">
-                    <span id="sec"></span>
-                    <br/>
-                    <span>SECS</span>
+            </div>
+            <h4 class="annee">2022</h4>
+        </div>
+        <div class="blocCaR">
+            <div class="bloc1">
+                <div class="compteAReb">
+                    <div class="jours">
+                        <span id="jours"></span>
+                        <br/>
+                        <span>JOURS</span>
+                    </div>
+                    <div class="heures">
+                        <span id="heures"></span>
+                        <br/>
+                        <span>HEURES</span>
+                    </div>
+                    <div class="min">
+                        <span id="min"></span>
+                        <br/>
+                        <span>MIN</span>
+                    </div>
+                    <div class="sec">
+                        <span id="sec"></span>
+                        <br/>
+                        <span>SECS</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 <script type="text/javascript" src="./assets/js/wedding.js"></script>
 </body>
 </html>
