changement design landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="header">
             <h1 class="titre">Emi</h1>
-            <h2 class="titreEsp">&#8496;</h2>
+            <h2 class="titreEsp">&</h2>
             <h1 class="titre">Quentin</h1>
         </div>
         <div class="navRight">
@@ -33,48 +33,43 @@
             </ul>
         </div>
     </div>
-    <div class="secondaryHeader">
+    <div class="header2">
         <div class="blocSTD">
             <div class="date">
-                <div class="journee">
-                    <span class="saveTheDate">samedi</span>
-                </div>
-                <div class="numeroJournee">
-                    <span class="jour">25</span> 
-                </div>
-                <div class="saveTheDate1">
-                    juin
-                </div>
+                &#x1F680; Samedi 25 Juin 2022
             </div>
-            <h4 class="annee">2022</h4>
+            <!-- <h4 class="annee">2022</h4> -->
         </div>
-        <div class="blocCaR">
-            <div class="bloc1">
-                <div class="compteAReb">
-                    <div class="jours">
-                        <span id="jours"></span>
-                        <br/>
-                        <span>JOURS</span>
-                    </div>
-                    <div class="heures">
-                        <span id="heures"></span>
-                        <br/>
-                        <span>HEURES</span>
-                    </div>
-                    <div class="min">
-                        <span id="min"></span>
-                        <br/>
-                        <span>MIN</span>
-                    </div>
-                    <div class="sec">
-                        <span id="sec"></span>
-                        <br/>
-                        <span>SECS</span>
+        <div class="secondaryHeader">
+            <div class="blocCaR">
+                <div class="bloc1">
+                    <div class="compteAReb">
+                        <div class="jours">
+                            <span id="jours"></span>
+                            <br/>
+                            <span>JOURS</span>
+                        </div>
+                        <div class="heures">
+                            <span id="heures"></span>
+                            <br/>
+                            <span>HEURES</span>
+                        </div>
+                        <div class="min">
+                            <span id="min"></span>
+                            <br/>
+                            <span>MIN</span>
+                        </div>
+                        <div class="sec">
+                            <span id="sec"></span>
+                            <br/>
+                            <span>SECS</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 <script type="text/javascript" src="./assets/js/wedding.js"></script>
 </body>
 </html>
