mises à jour navbar + design landing page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="mainHeader">
         <div class="navLeft">
             <ul>
-                <a href="#"><li>Lorem 1</li></a>
-                <a href="#"><li>Lorem 2</li></a>
-                <a href="#"><li>Lorem 3</li></a>
+                <a href="./index.html"><li>Accueil</li></a>
+                <a href="#"><li>Programme</li></a>
+                <a href="#"><li>Informations</li></a>
             </ul>
         </div>
         <div class="header">
@@ -27,9 +27,9 @@
         </div>
         <div class="navRight">
             <ul>
-                <a href="#"><li>Lorem 1</li></a>
-                <a href="#"><li>Lorem 2</li></a>
-                <a href="#"><li>Lorem 3</li></a>
+                <a href="#"><li>Personnages</li></a>
+                <a href="#"><li>H&eacute;bergement</li></a>
+                <a href="#"><li>Contact</li></a>
             </ul>
         </div>
     </div>
@@ -67,6 +67,7 @@
                     </div>
                 </div>
             </div>
+            <a href="" class="chevron"><img src="./assets/img/chevronDown.svg" ></a>
         </div>
     </div>
 
