media queries 1920px

--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
             <a href="" class="chevron"><img src="./assets/img/chevronDown.svg" ></a>
         </div>
     </div>
+    <div class="allInfo">
+        <div>
+            <h2>Programme</h2>
+        </div>
+        <div>
+            <h2>Informations</h2>
+        </div>
+        <div>
+            <h2>Personnages</h2>
+        </div>
+        <div>
+            <h2>H&eacute;bergement</h2>
+        </div>
+        <div>
+            <h2>Contact</h2>
+        </div>
+    </div>
+
 
 <script type="text/javascript" src="./assets/js/wedding.js"></script>
 </body>
