--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div class="mainHeader">
         <div class="navLeft">
-            <ul>
+            <ul id="navbar__list">
                 <a href="./index.html"><li>Accueil</li></a>
-                <a href="#"><li>Programme</li></a>
-                <a href="#"><li>Informations</li></a>
+                <li class=""><a class="page-scroll" href="#programme">Programme</a></li>
+                <li class=""><a class="page-scroll" href="#informations">Informations</a></li>
             </ul>
         </div>
         <div class="header">
@@ -26,10 +26,10 @@
             <h1 class="titre">Quentin</h1>
         </div>
         <div class="navRight">
-            <ul>
-                <a href="#"><li>Personnages</li></a>
-                <a href="#"><li>H&eacute;bergement</li></a>
-                <a href="#"><li>Contact</li></a>
+            <ul id="navbar__list">
+                <li class=""><a class="page-scroll" href="#personnages">Personnages</a></li>
+                <li class=""><a class="page-scroll" href="#hebergement">H&eacute;bergement</a></li>
+                <li class=""><a class="page-scroll" href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -67,25 +67,105 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="chevron"><img src="./assets/img/chevronDown.svg" ></a>
+            <a href="#programme" class="page-scroll chevron"><img src="./assets/img/chevronDown.svg" ></a>
         </div>
     </div>
     <div class="allInfo">
-        <div>
-            <h2>Programme</h2>
-        </div>
-        <div>
-            <h2>Informations</h2>
-        </div>
-        <div>
-            <h2>Personnages</h2>
-        </div>
-        <div>
-            <h2>H&eacute;bergement</h2>
-        </div>
-        <div>
-            <h2>Contact</h2>
-        </div>
+        <section id="programme">
+            <div>
+                <h2 id="section1">Programme</h2>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+            </div>
+        </section>
+        <section id="informations">
+            <div id="section2">
+                <h2>Informations</h2>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+            </div>
+        </section>
+        <section id="personnages">
+            <div id="section3">
+                <h2>Personnages</h2>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+            </div>
+        </section>
+        <section id="hebergement">
+            <div id="section4">
+                <h2>H&eacute;bergement</h2>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+            </div>
+        </section>
+        <section id="contact">
+            <div id="section5">
+                <h2>Contact</h2>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+                <p>A</p>
+            </div>
+        </section>
     </div>
 
 
