--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </div>
     <div class="allInfo">
         <section id="programme">
-            <div>
-                <h2 id="section1">Programme</h2>
+            <div id="section1">
+                <h2>Programme</h2>
                 <p>A</p>
                 <p>A</p>
                 <p>A</p>
