design et positionnement emoji

--- a/index.html
+++ b/index.html
@@ -112,20 +112,21 @@
         <section id="personnages">
             <div id="section3">
                 <h2>Personnages</h2>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
+                <div>
+                    <img src="./assets/img/emoji/emi.JPG" class="emoji" alt="emoji Emi">
+                    <img src="./assets/img/emoji/quentin.JPG" class="emoji" alt="emoji Quentin">
+                </div>
+                <div>
+                    <img src="./assets/img/emoji/cathy.JPG" class="emoji" alt="emoji Cathy">
+                    <img src="./assets/img/emoji/philippe.JPG" class="emoji" alt="emoji Philippe">
+                    <img src="./assets/img/emoji/carine.JPG" class="emoji" alt="emoji Carine">
+                    <img src="./assets/img/emoji/roland.JPG" class="emoji" alt="emoji Roland">
+                </div>
+                <div>
+                    <img src="./assets/img/emoji/marjo.JPG" class="emoji" alt="emoji Marjo">
+                    <img src="./assets/img/emoji/viviane.JPG" class="emoji" alt="emoji Viviane">
+                    <img src="./assets/img/emoji/pascal.JPG" class="emoji" alt="emoji Pascal">
+                </div>
             </div>
         </section>
         <section id="hebergement">
