hebergement - test premiere etiquette

--- a/index.html
+++ b/index.html
@@ -132,20 +132,10 @@
         <section id="hebergement">
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
+                <div class="hebergement1">
+                    <h4>H&eacute;bergement</h4>
+                    <img src="https://placebear.com/200/300" alt="">
+                </div>
             </div>
         </section>
         <section id="contact">
