--- a/index.html
+++ b/index.html
@@ -126,15 +126,18 @@
                     <img src="./assets/img/emoji/marjo.JPG" class="emoji" alt="emoji Marjo">
                     <img src="./assets/img/emoji/viviane.JPG" class="emoji" alt="emoji Viviane">
                     <img src="./assets/img/emoji/pascal.JPG" class="emoji" alt="emoji Pascal">
+                    <img src="./assets/img/emoji/leo.JPG" class="emoji" alt="emoji L&eacute;o">
                 </div>
             </div>
         </section>
         <section id="hebergement">
             <div id="section4">
                 <h2>H&eacute;bergement</h2>
-                <div class="hebergement1">
+                <div>
                     <h4>H&eacute;bergement</h4>
-                    <img src="https://placebear.com/200/300" alt="">
+                    <div class="hebergement1">
+                        <img src="https://placebear.com/200/300" alt="">
+                    </div>
                 </div>
             </div>
         </section>
