animations + correction animations

--- a/index.html
+++ b/index.html
@@ -33,12 +33,25 @@
             </ul>
         </div>
     </div>
+    <div>
+        <ul class="background">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+    </div>
     <div class="header2">
         <div class="blocSTD">
             <div class="date">
                 &#x1F680; Samedi 25 Juin 2022
             </div>
-            <!-- <h4 class="annee">2022</h4> -->
         </div>
         <div class="secondaryHeader">
             <div class="blocCaR">
