--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div>
-        <ul class="background">
+        <ul id="background">
             <span></span>
             <span></span>
             <span></span>
@@ -46,6 +46,9 @@
             <span></span>
             <span></span>
          </ul>
+    </div>
+    <div class="logo">
+        <img src="./assets/img/lavande.png" alt="">
     </div>
     <div class="header2">
         <div class="blocSTD">
