Design de la partie "programme "

--- a/index.html
+++ b/index.html
@@ -89,21 +89,33 @@
     <div class="allInfo">
         <section id="programme">
             <div id="section1">
-                <h2>Programme</h2>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
+                <div class="prgmEtTitre">
+                    <h2>Programme</h2>
+                    <div class="prgmText">
+                        <h4>Programme du Samedi 25 juin</h4>
+                        <h3>16h</h3>
+                        <p>Rendez-vous à la mairie</p>
+                        <h3>17h-18h</h3>
+                        <p>Flânerie dans les oliviers, piscine,
+                        <br>repos ou rafraîchissement
+                        </p>
+                        <h3>18h</h3>
+                        <p>Rendez-vous pour la soirée</p>
+                    </div>
+                </div>
+                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
+                <div class="backgroundBlock"></div>
+            </div>
+            <div id="section11">
+                <div class="prgmEtTitre2">
+                    <div class="prgmText">
+                        <h4>Programme du Dimanche 26 juin</h4>
+                        <h3>11h</h3>
+                        <p>Brunch</p>
+                    </div>
+                </div>
+                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
+                <div class="backgroundBlock"></div>
             </div>
         </section>
         <section id="informations">
