canva + mise en forme "programme"

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Quentin & Emi Wedding</title>
 </head>
 <body>
+    <canvas id="zoneCanvas" width="300px" height="300px" style="border: 1px solid black"></canvas>
     <div class="mainHeader">
         <div class="navLeft">
             <ul id="navbar__list">
@@ -92,15 +93,14 @@
                 <div class="prgmEtTitre">
                     <h2>Programme</h2>
                     <div class="prgmText">
-                        <h4>Programme du Samedi 25 juin</h4>
-                        <h3>16h</h3>
-                        <p>Rendez-vous à la mairie</p>
-                        <h3>17h-18h</h3>
-                        <p>Flânerie dans les oliviers, piscine,
-                        <br>repos ou rafraîchissement
+                        <h1>Programme du Samedi 25 juin</h1>
+                        <p>Rendez-vous à la <span class="bold">mairie de Cadenet</span> à <span class="bold">16h</span> pour le mariage civil.</p>
+                        <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de <span class="bold">18h</span> (vous
+                            <br/>
+                             pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine 
+                            <br>
+                            entre la cérémonie civile et la soirée).
                         </p>
-                        <h3>18h</h3>
-                        <p>Rendez-vous pour la soirée</p>
                     </div>
                 </div>
                 <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
@@ -191,6 +191,7 @@
     </div>
 
 
-<script type="text/javascript" src="./assets/js/wedding.js"></script>
+<script src="./assets/js/wedding.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
