--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>Quentin & Emi Wedding</title>
 </head>
 <body>
-    <canvas id="zoneCanvas" width="300px" height="300px" style="border: 1px solid black"></canvas>
     <div class="mainHeader">
         <div class="navLeft">
             <ul id="navbar__list">
@@ -96,6 +95,7 @@
                         <h1>Programme du Samedi 25 juin</h1>
                         <p>Rendez-vous à la <span class="bold">mairie de Cadenet</span> à <span class="bold">16h</span> pour le mariage civil.</p>
                         <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de <span class="bold">18h</span> (vous
+                            <!-- <div class="trait"></div> -->
                             <br/>
                              pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine 
                             <br>
@@ -107,15 +107,16 @@
                 <div class="backgroundBlock"></div>
             </div>
             <div id="section11">
+                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
+                <div class="backgroundBlock"></div>
                 <div class="prgmEtTitre2">
-                    <div class="prgmText">
+                    <div class="prgmText2">
                         <h4>Programme du Dimanche 26 juin</h4>
                         <h3>11h</h3>
                         <p>Brunch</p>
                     </div>
                 </div>
-                <img src="https://placebear.com/300/300" alt="" class="photoPrgm">
-                <div class="backgroundBlock"></div>
+
             </div>
         </section>
         <section id="informations">
