design partie Information

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="allInfo">
         <section id="programme">
             <div id="section1">
-                <div class="prgmEtTitre">
+                <div class="sectionTitre">
                     <h2>Programme</h2>
                     <div class="prgmText">
                         <h1>Programme du Samedi 25 juin</h1>
@@ -119,28 +119,22 @@
 
             </div>
         </section>
-        <section id="informations">
+        <section id="sections">
             <div id="section2">
-                <h2>Informations</h2>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
-                <p>A</p>
+                <div class="sectionTitre">
+                    <h2>Informations</h2>
+                </div>
+                <div class="infoText">
+                    <img src="https://placebear.com/600/400" alt="">
+                </div>
+                <div class="backgroundBlockInfo"></div>
             </div>
         </section>
         <section id="personnages">
             <div id="section3">
-                <h2>Personnages</h2>
+                <div class="sectionTitre">
+                    <h2>Personnages</h2>
+                </div>
                 <div>
                     <img src="./assets/img/emoji/emi.JPG" class="emoji" alt="emoji Emi">
                     <img src="./assets/img/emoji/quentin.JPG" class="emoji" alt="emoji Quentin">
