design partie Informations en lorem

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,200&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,200&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <title>Quentin & Emi Wedding</title>
 </head>
+
 <body>
     <div class="mainHeader">
         <div class="navLeft">
             <ul id="navbar__list">
-                <a href="./index.html"><li>Accueil</li></a>
+                <a href="./index.html">
+                    <li>Accueil</li>
+                </a>
                 <li class=""><a class="page-scroll" href="#programme">Programme</a></li>
                 <li class=""><a class="page-scroll" href="#informations">Informations</a></li>
             </ul>
@@ -45,7 +54,7 @@
             <span></span>
             <span></span>
             <span></span>
-         </ul>
+        </ul>
     </div>
     <div class="logo">
         <img src="./assets/img/lavande.png" alt="">
@@ -62,28 +71,28 @@
                     <div class="compteAReb">
                         <div class="jours">
                             <span id="jours"></span>
-                            <br/>
+                            <br />
                             <span>JOURS</span>
                         </div>
                         <div class="heures">
                             <span id="heures"></span>
-                            <br/>
+                            <br />
                             <span>HEURES</span>
                         </div>
                         <div class="min">
                             <span id="min"></span>
-                            <br/>
+                            <br />
                             <span>MIN</span>
                         </div>
                         <div class="sec">
                             <span id="sec"></span>
-                            <br/>
+                            <br />
                             <span>SECS</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <a href="#programme" class="page-scroll chevron"><img src="./assets/img/chevronDown.svg" ></a>
+            <a href="#programme" class="page-scroll chevron"><img src="./assets/img/chevronDown.svg"></a>
         </div>
     </div>
     <div class="allInfo">
@@ -93,11 +102,13 @@
                     <h2>Programme</h2>
                     <div class="prgmText">
                         <h1>Programme du Samedi 25 juin</h1>
-                        <p>Rendez-vous à la <span class="bold">mairie de Cadenet</span> à <span class="bold">16h</span> pour le mariage civil.</p>
-                        <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de <span class="bold">18h</span> (vous
+                        <p>Rendez-vous à la <span class="bold">mairie de Cadenet</span> à <span class="bold">16h</span>
+                            pour le mariage civil.</p>
+                        <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de
+                            <span class="bold">18h</span> (vous
                             <!-- <div class="trait"></div> -->
-                            <br/>
-                             pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine 
+                            <br />
+                            pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine
                             <br>
                             entre la cérémonie civile et la soirée).
                         </p>
@@ -127,7 +138,23 @@
                 <div class="infoText">
                     <img src="https://placebear.com/600/400" alt="">
                 </div>
-                <div class="backgroundBlockInfo"></div>
+            </div>
+            <div class="backgroundBlockInfo">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
+                    laudantium possimus
+                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
+                    aut assumenda.</p>
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
+                    laudantium possimus
+                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
+                    aut assumenda.</p>
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta commodi id debitis adipisci et a
+                    laudantium possimus
+                    laborum exercitationem doloremque rem, officiis asperiores sunt delectus similique distinctio nemo
+                    aut assumenda.</p>
             </div>
         </section>
         <section id="personnages">
@@ -186,7 +213,8 @@
     </div>
 
 
-<script src="./assets/js/wedding.js"></script>
-<script src="./assets/js/script.js"></script>
+    <script src="./assets/js/wedding.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
