test canvas (pas fonctionnel)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <canvas id="zoneCanvas" width="150" height="150"></canvas> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -15,7 +16,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <title>Quentin & Emi Wedding</title>
+    <title>Emi & Quentin's Wedding</title>
 </head>
 
 <body>
@@ -122,9 +123,9 @@
                 <div class="backgroundBlock"></div>
                 <div class="prgmEtTitre2">
                     <div class="prgmText2">
-                        <h4>Programme du Dimanche 26 juin</h4>
+                        <h3>Programme du Dimanche 26 juin</h3>
                         <h3>11h</h3>
-                        <p>Brunch</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nesciunt optio beatae consequatur impedit fuga quas velit!</p>
                     </div>
                 </div>
 
@@ -214,7 +215,7 @@
 
 
     <script src="./assets/js/wedding.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/canva.js"></script>
 </body>
 
 </html>
