--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <canvas id="zoneCanvas" width="150" height="150"></canvas> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -99,6 +98,7 @@
     <div class="allInfo">
         <section id="programme">
             <div id="section1">
+                <canvas id="zoneCanvas" width="1440" height="500"></canvas>
                 <div class="sectionTitre">
                     <h2>Programme</h2>
                     <div class="prgmText">
@@ -107,7 +107,6 @@
                             pour le mariage civil.</p>
                         <p>Les célébrations se poursuivront à la <span class="bold">Bastide du Laval</span> à partir de
                             <span class="bold">18h</span> (vous
-                            <!-- <div class="trait"></div> -->
                             <br />
                             pourrez prendre le temps de vous rafraîchir ou de flâner sur le domaine
                             <br>
