FInalisation des canvas

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         </section>
         <section id="sections">
             <div id="section2">
+                <canvas id="zoneCanvas1" width="1440" height="500"></canvas>
                 <div class="sectionTitre">
                     <h2>Informations</h2>
                 </div>
