--- a/index.html
+++ b/index.html
@@ -163,70 +163,72 @@
                 <div class="sectionTitre">
                     <h2>Personnages</h2>
                 </div>
-                <div class="emojiRow1">
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/emi.JPG" alt="emoji Emi">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
+                <div>
+                    <div class="emojiRow1">
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/emi.JPG" alt="emoji Emi">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/quentin.JPG" alt="emoji Quentin">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
                     </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/quentin.JPG" alt="emoji Quentin">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
+                    <div class="emojiRow1">
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/cathy.JPG" alt="emoji Cathy">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/philippe.JPG" alt="emoji Philippe">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/carine.JPG" alt="emoji Carine">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/roland.JPG" alt="emoji Roland">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
                     </div>
-                </div>
-                <div class="emojiRow1">
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/cathy.JPG" alt="emoji Cathy">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/philippe.JPG" alt="emoji Philippe">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/carine.JPG" alt="emoji Carine">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/roland.JPG" alt="emoji Roland">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                </div>
-                <div class="emojiRow1">
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/marjo.JPG" alt="emoji Marjo">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/viviane.JPG" alt="emoji Viviane">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/pascal.JPG" alt="emoji Pascal">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
-                    </div>
-                    <div class="emoji">
-                        <img src="./assets/img/emoji/leo.JPG" alt="emoji L&eacute;o">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem</p>
-                        <div class="statutEmoji">Lorem ipsum</div>
+                    <div class="emojiRow1">
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/marjo.JPG" alt="emoji Marjo">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/viviane.JPG" alt="emoji Viviane">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/pascal.JPG" alt="emoji Pascal">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
+                        <div class="emoji">
+                            <img src="./assets/img/emoji/leo.JPG" alt="emoji L&eacute;o">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem</p>
+                            <div class="statutEmoji">Lorem ipsum</div>
+                        </div>
                     </div>
                 </div>
         </section>
